Fixed: 	- Header on tablet, now has full width 	- Icons of video's categories, now keep their triangles inside 	the body

--- a/_sass/Videos/_videos.sass
+++ b/_sass/Videos/_videos.sass
@@ -201,7 +201,7 @@ section.modal-window
 @media screen and (max-width: 991px)
   .categories-row
     .category-icon-container
-      margin: 0px 30px
+      margin: 0px 20px
 
 @media screen and (max-width: 767px)
   .back-row
